src/app/body-details/body-details.component.css
.detail-card {
    z-index: 3;
    margin-bottom: 0;
}

@media (max-width: 767px) {
    .detail-card {
        min-height: 100vh;
    }
}

.body-image {
    width:100%;
    height:auto;
}

.card-header {
    display: flex;
    padding: 12px;
    padding-bottom: 0;
}

.share-div {
    text-align: right;
    padding:0;
    margin:0
}

.theme-header {
    padding-bottom: 3px;
}

.action-buttons {
    margin-left: auto;
    margin-top: -4px;
}

.body-name {
    font-weight: bold;
    font-size: 14pt;
    margin-top: 5px;
}

.description {
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
}

.subtitle {
    margin-left: 10px;
    font-weight: bold;
    padding-bottom: 6px;
    color: #777;
    font-size: 10pt;
}

.subsection {
    margin-bottom: 10px;
}

.float-fixed-right-bottom {
    position: fixed;
    bottom: 20px;
    right: 20px;
}

